--- a/source/style/ItemList.styl
+++ b/source/style/ItemList.styl
@@ -5,15 +5,15 @@
   padding 15px 30px
   line-height 2em
   a
-    color #3eaf7c
+    color #0366d6
+    text-decoration underline
   code
-    border-radius 2px
-    border 1px dotted #666
-    color #d4d5d6
-    padding .25rem .5rem
+    padding 0
+    padding-top 0.2em
+    padding-bottom 0.2em
     margin 0
-    font-size .85em
-    background-color rgba(27,31,35,.05)
+    font-size 85%
+    background-color #f6f8fa
     border-radius 3px
 
 .btn-page
