style: hide header in error view

--- a/source/style/ErrorView.styl
+++ b/source/style/ErrorView.styl
@@ -10,7 +10,8 @@
     padding 0
     line-height 2em
   a
-    color #3eaf7c
+    color #0366d6
+    text-decoration underline
 
 @media (max-width 600px)
   .error-view
