--- a/source/style/Item.styl
+++ b/source/style/Item.styl
@@ -21,15 +21,21 @@
     a
       text-decoration none
       color #485763
-  .meta, .labels
+  .meta
     font-size .85em
     color #788590
     text-decoration none
     a
       color #788590
-      text-decoration underline
-      &:hover
-        color #d480aa
+      text-decoration none
+  .labels
+    margin: 0 3px;
+    font-size: 13px;
+    color: #565b65;
+    border: 1px solid #e1e1e1;
+    background: #e8e8e8;
+    border-radius: 3px;
+    padding: 1px 3px 2px;
 
 .list-item-left
   padding-left 28px
