--- a/source/style/ItemView.styl
+++ b/source/style/ItemView.styl
@@ -1,6 +1,6 @@
 @require './md2html-theme/theme.styl'
 
-.item-view-header, .item-view-footer
+.item-view-header, .item-view-footer, .item-view-comments
   padding 2.8em 2em 1em
   a
     text-decoration none
@@ -21,6 +21,67 @@
       color #788590
       text-decoration underline
 
+.item-view-comments
+  margin-bottom 40px
+  &:before
+    display block
+    width 30%
+    content ''
+    height 1px
+    background #eee
+    margin 50px auto
+  .comments-content
+    list-style none
+    margin-top 20px
+    padding 10px 0 10px 70px
+    li
+      border 1px solid #eee
+      border-radius 4px
+      margin-bottom 50px
+      padding 20px
+      position relative
+      .avatar
+        border 1px solid #eee
+        position absolute
+        left -68px
+        top 0
+        width 48px
+        height 48px
+        border-radius 50%
+        overflow hidden
+        width 36px
+        height 36px
+        img
+          display block
+          width 100%
+          height auto
+      .body
+        .markdown-body
+          padding-top 20px
+          h1, h2, h3, h4, h5, h6, p
+            color #42505a
+        & > a
+          color #42505a
+        & > span
+          color #828282
+  .button
+    margin 50px auto 0
+    display block
+    text-align center
+    max-width 170px
+    border 2px solid #c3c2c9
+    color #686868
+    border-radius 5px
+    font-size 14px
+    height 32px
+    line-height 32px
+    background #fff
+    overflow hidden
+    position relative
+    cursor pointer
+    &:focus
+      outline none
+
 .content
   padding 0 2em
   border 0
@@ -37,66 +98,15 @@
 #item-view-comments
   padding 0 2em 1em
 
-.gt-container
-  font-weight 300
-  .gt-comment-content
-    padding 0 1em 2em 1em
-  .gt-link
-    border-bottom 0
-  .gt-meta
-    border-bottom 0
-  .gt-svg
-    svg
-      fill #42505a
-  .gt-ico-arrdown
-    .gt-svg
-      display none
-  .gt-comment-like
-    svg
-      fill #d480aa
-  .gt-ico-edit
-    svg
-      fill #aaa
-  .gt-header-textarea
-    background-color hsla(0,0%,100%,.1)
-    color #ddd
-  .gt-header-textarea:hover
-    background-color hsla(0,0%,100%,.1)
-  .gt-ico-text, .gt-comments-null, .gt-user-inner, .gt-action
-    color #788590
-  .gt-comments-null
-    font-size 14px
-    font-weight 400
-  .gt-user-inner
-    font-weight 400
-  .gt-popup
-    margin-top 10px
-    background-color #1d1f21
-    border 1px solid #666
-    border-radius 4px
-  .gt-action:hover, .gt-link-project:hover
-    color #42505a
-  .gt-copyright
-    border-top 1px solid #788590
-  .gt-btn, .gt-btn:hover
-    background-color #42505a
-  .gt-comment-admin
-    .gt-comment-content
-      background-color hsla(0,0%,100%,.1)
-      border-radius 4px
-    .gt-comment-content:hover
-      box-shadow: 0 0 0 0
-  .gt-comment-body
-    color #42505a !important
-  .gt-comment-username, .gt-comment-username:hover
-    color #aaa
-  a, a.is--active, a.is--active:hover, a:hover
-    color #42505a
-
 @media (max-width 600px)
+  .item-view-comments
+    .avatar
+      display none
+  .item-view-comments .comments-content
+      list-style none
+      margin-top 20px
+      padding 10px 0 10px 0
   .item-view-header
     padding 1.2em 2em 1em
     h1
       font-size 1.25em
-  .gt-comment-text, .gt-comment-date
-    display none
